[tool.poetry]
name = "postgres-homework"
version = "0.1.0"
description = ""
authors = ["Mariya Kuznetsova <kuznetsova19.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
